--- a/views/show.haml
+++ b/views/show.haml
@@ -18,10 +18,17 @@
       .song_section
         %span.section_title= section[:title]
         - section[:lines].each do |line|
-          %div{:class => (line[:lyrics].any?{ |l| l != '' && l != ' ' }) ? ['line'] : ['line','instrumental_line'] }
+          .line
             .chord_line
+              - if line[:instrumental]
+                [
               - line[:chords].map { |c| c.to_s.length == 0 ? '&nbsp;' : c.to_s }.each do |chord|
                 %span.chord_block= chord
-            .lyric_line
-              - line[:lyrics].map { |l| l.length == 0 ?  '&nbsp;' : l.gsub(' ','&nbsp;') }.each do |lyric|
-                %span.lyric_block= (lyric[-1] == '-') ? lyric[0..-2] : lyric
+              - if line[:instrumental]
+                ]
+              - if line[:repeat] > 1
+                %span.repeat= "x#{line[:repeat]}"
+            - unless line[:instrumental]
+              .lyric_line
+                - line[:lyrics].map { |l| l.length == 0 ?  '&nbsp;' : l.gsub(' ','&nbsp;') }.each do |lyric|
+                  %span.lyric_block= (lyric[-1] == '-') ? lyric[0..-2] : lyric
