--- a/views/show.haml
+++ b/views/show.haml
@@ -1,44 +1,48 @@
-#song_container
-  %h2= @song.title
+%link{:href => '/css/pages/show.css', :rel => 'stylesheet', :type => 'text/css'}
 
-  #song_info
+.grid_12#content
+  
+  #song_container
+    %h2= @song.title
 
-    .artist= @song.artist
-    .song_key
-      Key of
-      %span= @song.song_key.symbol
+    #song_info
 
-    .time_signature
-      Time Signature
-      %span= @song.time_signature
-    
+      .artist= @song.artist
+      .song_key
+        Key of
+        %span= @song.song_key.symbol
 
-  #song_chords
-    - @rendered_sections.each do |section|
-      .song_section
-        .section_header
-          %span.section_title= section[:title]
-          - if section[:repeats] > 1
-            %span.section_repeat
-              x#{section[:repeats]}
-        - unless section[:is_repeat]
-          - if section[:instrumental]
-            - section[:lines].each do |line|
-              .instrumental_line
-                - if line[:repeat] > 1
-                  [
-                - line[:chords].map { |c| c.to_s.length == 0 ? '&nbsp;' : c.to_s }.each do |chord|
-                  %span.chord_block= chord
-                - if line[:repeat] > 1
-                  ]
-                  %span.line_repeat
-                    x#{line[:repeat]}
-          - else
-            - section[:lines].each do |line|
-              .line
-                .chord_line
+      .time_signature
+        Time Signature
+        %span= @song.time_signature
+      
+
+    #song_chords
+      - @rendered_sections.each do |section|
+        .song_section
+          .section_header
+            %span.section_title= section[:title]
+            - if section[:repeats] > 1
+              %span.section_repeat
+                x#{section[:repeats]}
+          - unless section[:is_repeat]
+            - if section[:instrumental]
+              - section[:lines].each do |line|
+                .instrumental_line
+                  - if line[:repeat] > 1
+                    [
                   - line[:chords].map { |c| c.to_s.length == 0 ? '&nbsp;' : c.to_s }.each do |chord|
                     %span.chord_block= chord
-                .lyric_line
-                  - line[:lyrics].map { |l| l.length == 0 ?  '&nbsp;' : l.gsub(' ','&nbsp;') }.each do |lyric|
-                    %span.lyric_block= (lyric[-1] == '-') ? lyric[0..-2] : lyric
+                  - if line[:repeat] > 1
+                    ]
+                    %span.line_repeat
+                      x#{line[:repeat]}
+            - else
+              - section[:lines].each do |line|
+                .line
+                  .chord_line
+                    - line[:chords].map { |c| c.to_s.length == 0 ? '&nbsp;' : c.to_s }.each do |chord|
+                      %span.chord_block= chord
+                  .lyric_line
+                    - line[:lyrics].map { |l| l.length == 0 ?  '&nbsp;' : l.gsub(' ','&nbsp;') }.each do |lyric|
+                      %span.lyric_block= (lyric[-1] == '-') ? lyric[0..-2] : lyric
