--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,8 @@
-%h2 Main Page
-%p Here is some text.
-%p Here is a <a href='/'>link</a>.
-%p ttys!
-%p= Song.all.inspect
+.grid_12#subtitle
+  %h2 Main Page
+
+.grid_12#content
+  %p Here is some text.
+  %p Here is a <a href='/'>link</a>.
+  %p ttys!
+  %p= Song.all.inspect
