editing core for ajax

--- a/views/show_song.haml
+++ b/views/show_song.haml
@@ -1,4 +1,4 @@
-%link{:href => '/css/pages/show.css', :rel => 'stylesheet', :type => 'text/css'}
+%link{:href => '/css/pages/show_song.css', :rel => 'stylesheet', :type => 'text/css'}
 
 .grid_12#content
   
