--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,7 +11,7 @@
     %script{:type => 'text/javascript', :src => '/js/lib/jquery.min.js'}
   %body
     .container_12
-      .grid_12#title
+      .grid_12#header
         %h1
           %a{:href => '/'}= SiteConfig.title
       #content_wrapper
