--- a/views/edit_song.haml
+++ b/views/edit_song.haml
@@ -6,7 +6,7 @@
 - %w[ jquery.autogrow jquery.defaultvalue ].each do |dep|
   %script{:type => 'text/javascript', :src => "/js/plugins/#{dep}.js"}
 
-- %w[ sections_editor structure_editor edit_song json2 ].each do |dep|
+- %w[ utils json2 sections_editor structure_editor edit_song ].each do |dep|
   %script{:type => 'text/javascript', :src => "/js/scripts/#{dep}.js"}
   
 .grid_12#subtitle
