--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,7 +23,10 @@
                 %a{:href => "/new_song"} new
               %li.nav_li
                 %a{:href => "http://www.google.com"} google
-          #title
+          #title_card
+            %a{:href => "/"}
+              %span
+                praisebook
     #main_bg
       #main_head
         #main_head_center
